# weft

./: .gitignore  .travis.yml  Cargo.toml  README.md  arbitrary-change.html  chapter_1.html  index.html  print.html  searchindex.js  searchindex.json
.circleci/: config.yml  git-set-id.sh  ignore-gh-pages.yml  mdbook-install.sh  push-to-gh-pages.sh  shellcheck-install.sh  shellcheck-run.sh
actix/: Cargo.toml
actix/src/: lib.rs
actix/tests/: actix-canary.rs
derive/: Cargo.toml
derive/src/: derive_renderable.rs  inline_parse.rs  lib.rs
derive/tests/: hello.html
docs/: book.toml
erased/: Cargo.toml
erased/src/: lib.rs  template.rs
erased/tests/: erased.rs
src/: lib.rs  template.rs
tests/: canary.rs
tower/: Cargo.toml
tower/src/: lib.rs
tower/tests/: tower-canary.rs
weft/: Cargo.toml
weft/benches/: big-table.html  teams.html  templates.rs
weft/src/: extensions.rs  lib.rs  template.rs
weft/tests/: api_for_renderable.rs  canary.rs  conditional.html  content.html  for-in.html  interpolatable.html  trivial.html  trivial_with_attrs.html
