[package]
authors = ["Ceri Storey <cez@necrofish.org.uk>"]
categories = ["web-programming", "template-engine"]
description = "HTML templating with composability in mind"
documentation = "https://docs.rs/weft_derive"
license = "Apache-2.0"
name = "weft_derive"
readme = "../README.md"
repository = "https://github.com/cstorey/weft"
version = "0.1.2"
edition = "2018"

[dependencies]
env_logger = "0.10.0"
html5ever = "0.26.0"
kuchiki = "0.8.0"
log = "0.4.5"
proc-macro2 = "1.0.0"
quote = "1.0"
regex = "1.0.6"
anyhow = "1.0.28"

[dependencies.syn]
features = ["extra-traits", "full"]
version = "2.0"

[lib]
proc-macro = true
