[package]
name = "weft-erased"
description = "Dynamic Polymorphism support for Weft"
license = "Apache-2.0"
version = "0.1.2"
repository = "https://github.com/cstorey/weft"
readme = "../README.md"
categories = ["web-programming", "template-engine"]
documentation = "https://docs.rs/weft-erased"
edition = "2018"

[dependencies]

[dependencies.weft]
path = "../weft"
version = "0.1.0"

[dev-dependencies]
