[package]
name = "weft-tower"
authors = ["Ceri Storey <cez@necrofish.org.uk>"]
edition = "2018"
description = "Tower-web support for Weft"
license = "Apache-2.0"
version = "0.1.1"
repository = "https://github.com/cstorey/weft"
readme = "../README.md"
categories = ["web-programming", "template-engine", "actix"]
documentation = "https://docs.rs/weft-tower"

[dependencies]
tower-web = "0.3.7"
weft = { path = "../weft" }
weft_derive = { path = "../derive" }
http = "0.1.18"
log = "0.4.8"

[dev-dependencies]
tokio = "0.2.6"
futures = "0.1.28"
reqwest = "0.9.20"
env_logger = "0.7.0"
