[package]
authors = ["Ceri Storey <cez@necrofish.org.uk>"]
name = "weft"
description = "HTML templating with composability in mind"
license = "Apache-2.0"
version = "0.1.1"
repository = "https://github.com/cstorey/weft"
readme = "../README.md"
categories = ["web-programming", "template-engine"]
documentation = "https://docs.rs/weft"
edition = "2018"

[dependencies]
v_htmlescape = "0.12.0"

[dependencies.weft_derive]
path = "../derive"
version = "0.1.0"

[dev-dependencies]
regex = "1.0.5"
