[package]
authors = ["Ceri Storey <cez@necrofish.org.uk>"]
name = "weft"
description = "HTML templating with composability in mind"
license = "Apache-2.0"
version = "0.1.1"
repository = "https://github.com/cstorey/weft"
readme = "../README.md"
categories = ["web-programming", "template-engine"]
documentation = "https://docs.rs/weft"
edition = "2018"

[dependencies]
v_htmlescape = "0.15.7"

[dependencies.weft_derive]
path = "../derive"
version = "0.1.0"

[dev-dependencies]
criterion = "0.5.1"
regex = "1.0.5"

[[bench]]
name = "templates"
harness = false
